--- a/index.html
+++ b/index.html
@@ -3,41 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saxum Station Rock Music</title>
+    <title>Saxum Station</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Saxum Station Rock Music</h1>
-        <p>¡Tu fuente principal para rock sin interrupciones!</p>
+        <h1>Saxum Station</h1>
     </header>
-    <nav>
-        <ul>
-            <li><a href="#audio">Audio</a></li>
-            <li><a href="#video">Video</a></li>
-            <li><a href="#contacto">Contacto</a></li>
-        </ul>
-    </nav>
     <main>
-        <section id="audio">
-            <h2>Archivos de Audio</h2>
+        <aside id="menu">
             <ul>
-                <li><a href="audio/track1.mp3" target="_blank">Track 1</a></li>
-                <li><a href="audio/track2.mp3" target="_blank">Track 2</a></li>
-                <li><a href="audio/track3.mp3" target="_blank">Track 3</a></li>
+                <li><a href="#"><img src="radio-icon.png" alt="Radio">Radio</a></li>
+                <li><a href="#"><img src="videos-icon.png" alt="Videos">Videos</a></li>
+                <li><a href="#"><img src="podcast-icon.png" alt="Podcast">Podcast</a></li>
             </ul>
+        </aside>
+        <section id="main-content">
+            <input type="text" placeholder="Buscar...">
         </section>
-        <section id="video">
-            <h2>Archivos de Video</h2>
-            <ul>
-                <li><a href="video/video1.mp4" target="_blank">Video 1</a></li>
-                <li><a href="video/video2.mp4" target="_blank">Video 2</a></li>
-                <li><a href="video/video3.mp4" target="_blank">Video 3</a></li>
-            </ul>
-        </section>
+        <aside id="comments">
+            <h2>Comentarios de Usuarios</h2>
+            <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
+            <div class="comment">Usuario2: Los podcasts son increíbles.</div>
+        </aside>
     </main>
-    <footer>
-        <p>&copy; 2024 Saxum Station Rock Music. Todos los derechos reservados.</p>
-    </footer>
 </body>
 </html>
