--- a/index.html
+++ b/index.html
@@ -11,21 +11,25 @@
         <h1>Saxum Station</h1>
     </header>
     <main>
-        <aside id="menu">
-            <ul>
-                <li><a href="#"><img src="radio-icon.png" alt="Radio">Radio</a></li>
-                <li><a href="#"><img src="videos-icon.png" alt="Videos">Videos</a></li>
-                <li><a href="#"><img src="podcast-icon.png" alt="Podcast">Podcast</a></li>
-            </ul>
-        </aside>
-        <section id="main-content">
-            <input type="text" placeholder="Buscar...">
-        </section>
-        <aside id="comments">
-            <h2>Comentarios de Usuarios</h2>
-            <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
-            <div class="comment">Usuario2: Los podcasts son increíbles.</div>
-        </aside>
+        <table>
+            <tr>
+                <td id="menu">
+                    <ul>
+                        <li><a href="#"><img src="radio-icon.png" alt="Radio">Radio</a></li>
+                        <li><a href="#"><img src="videos-icon.png" alt="Videos">Videos</a></li>
+                        <li><a href="#"><img src="podcast-icon.png" alt="Podcast">Podcast</a></li>
+                    </ul>
+                </td>
+                <td id="main-content">
+                    <input type="text" placeholder="Buscar...">
+                </td>
+                <td id="comments">
+                    <h2>Comentarios de Usuarios</h2>
+                    <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
+                    <div class="comment">Usuario2: Los podcasts son increíbles.</div>
+                </td>
+            </tr>
+        </table>
     </main>
 </body>
 </html>
