--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <h1>Saxum Station</h1>
-        <svg width="100" height="50" viewBox="0 0 100 50" xmlns="http://www.w3.org/2000/svg">
-            <rect x="10" y="10" width="10" height="30" class="bar"></rect>
-            <rect x="30" y="10" width="10" height="30" class="bar"></rect>
-            <rect x="50" y="10" width="10" height="30" class="bar"></rect>
-            <rect x="70" y="10" width="10" height="30" class="bar"></rect>
-            <rect x="90" y="10" width="10" height="30" class="bar"></rect>
+        <svg width="120" height="50" viewBox="0 0 120 50" xmlns="http://www.w3.org/2000/svg">
+            <rect x="10" y="10" width="10" height="30" class="bar bar1"></rect>
+            <rect x="30" y="10" width="10" height="30" class="bar bar2"></rect>
+            <rect x="50" y="10" width="10" height="30" class="bar bar3"></rect>
+            <rect x="70" y="10" width="10" height="30" class="bar bar4"></rect>
+            <rect x="90" y="10" width="10" height="30" class="bar bar5"></rect>
         </svg>
     </header>
     <main>
@@ -34,7 +34,7 @@
                     </div>
                 </td>
                 <td id="comments">
-                    <h2>Comentarios de Usuarios</h2>
+                    <h2>Comentarios</h2>
                     <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
                     <div class="comment">Usuario2: Los podcasts son increíbles.</div>
                 </td>
