--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                     </div>
                 </td>
                 <td id="comments">
-                    <h2>Comentarios de Usuarios</h2>
+                    <h2>Comentarios</h2>
                     <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
                     <div class="comment">Usuario2: Los podcasts son increíbles.</div>
                 </td>
