--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Saxum Station</h1>
     </header>
     <div class="image-container">
-        <img src="img/sonido.gif" alt="Ecualizador">
+        <img src="ecualizador.gif" alt="Ecualizador">
     </div>
     <main>
         <table>
