--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h1>Saxum Station</h1>
     </header>
     <div class="image-container">
-        <img src="ecualizador.gif" alt="Ecualizador">
+        <img src="img/sonido.gif" alt="Ecualizador">
     </div>
     <main>
         <table>
@@ -30,7 +30,7 @@
                     </div>
                 </td>
                 <td id="comments">
-                    <h2>Comentarios de Usuarios</h2>
+                    <h2>Comentarios </h2>
                     <div class="comment">Usuario1: ¡Me encanta esta estación de rock!</div>
                     <div class="comment">Usuario2: Los podcasts son increíbles.</div>
                 </td>
