--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                         <li><a href="#"><img src="radio-icon.png" alt="Radio">Radio</a></li>
                         <li><a href="#"><img src="videos-icon.png" alt="Videos">Videos</a></li>
                         <li><a href="#"><img src="podcast-icon.png" alt="Podcast">Podcast</a></li>
+                        <li><a href="#"><img src="podcast-icon.png" alt="Podcast">Programas</a></li>
+
                     </ul>
                 </td>
                 <td id="main-content">
